--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
 
     //firebase
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
 
-    compile 'com.google.firebase:firebase-database:11.8.0'
-
-    compile 'com.google.firebase:firebase-storage:11.8.0'
 
     // FirebaseUI for Firebase Realtime Database
 
