--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.draxvel.simpleblog">
 
-     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+     <uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -20,15 +20,14 @@
 
         <activity android:name=".login.LoginActivity"
             android:screenOrientation="portrait">
-
-        </activity>
-
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity android:name=".PostActivity"
