--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,17 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
-    implementation'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
-
 
     // FirebaseUI for Firebase Realtime Database
 
     //UPD: changed to old version from 3.2.1 to 2.3.0
     implementation 'com.firebaseui:firebase-ui-database:2.3.0'
+
+    //circle imageView
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
 
 }
 //apply google plugin
