--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     //circle imageView
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
+    //crop image
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+
+
 
 }
 //apply google plugin
