--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/login_page_logo"
+        android:icon="@mipmap/default_image"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/login_page_logo"
         android:supportsRtl="true"
@@ -39,7 +39,7 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".SetupActivity">
+        <activity android:name=".settings.SettingsActivity">
         </activity>
 
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
