--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
 
         <activity
-            android:name=".PostActivity"
+            android:name=".NewPostActivity"
             android:screenOrientation="portrait">
         </activity>
 
