--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,9 @@
         </activity>
 
         <activity
-            android:name=".NewPostActivity"
-            android:screenOrientation="portrait">
+            android:name=".newpost.NewPostActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
         </activity>
 
         <activity android:name=".settings.SettingsActivity">
