--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,12 @@ dependencies {
     //crop image
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
 
-    //for dowmload image from firebase
+    //for download image from firebase
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    //compress image
+    implementation 'id.zelory:compressor:2.1.0'
 
 }
 //apply google plugin
