--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:support-v4:27.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -44,7 +45,7 @@ dependencies {
     // FirebaseUI for Firebase Realtime Database
 
     //UPD: changed to old version from 3.2.1 to 2.3.0
-   // implementation 'com.firebaseui:firebase-ui-database:3.2.1'
+    // implementation 'com.firebaseui:firebase-ui-database:3.2.1'
 
     //circle imageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
