--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,17 +30,17 @@
         </activity>
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
-            android:name=".newpost.NewPostActivity"
+            android:name=".ui.newpost.NewPostActivity"
             android:screenOrientation="portrait"
-            android:parentActivityName=".main.MainActivity">
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
 
-        <activity android:name=".settings.SettingsActivity">
+        <activity android:name=".ui.settings.SettingsActivity">
         </activity>
 
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
